--- a/recepcao.html
+++ b/recepcao.html
@@ -420,13 +420,13 @@
         // Your web app's Firebase configuration
         // Para Firebase JS SDK v7.20.0 e posterior, measurementId é opcional
         const firebaseConfig = {
-            apiKey: "YOUR_API_KEY", // SUBSTITUA PELA SUA CHAVE DE API
-            authDomain: "YOUR_AUTH_DOMAIN", // SUBSTITUA PELO SEU DOMÍNIO DE AUTENTICAÇÃO
-            projectId: "YOUR_PROJECT_ID",   // SUBSTITUA PELO SEU PROJECT ID
-            storageBucket: "YOUR_STORAGE_BUCKET", // SUBSTITUA PELO SEU STORAGE BUCKET
-            messagingSenderId: "YOUR_MESSAGING_SENDER_ID",
-            appId: "YOUR_APP_ID",
-            measurementId: "YOUR_MEASUREMENT_ID"
+            apiKey: "AIzaSyB9GkSqTIZ0kbVsba_WOdQeVAETrF9qna0", // Use sua própria chave! /* cite: 79 */
+            authDomain: "wzzm-ce3fc.firebaseapp.com", /* cite: 79 */
+            projectId: "wzzm-ce3fc", /* cite: 79 */
+            storageBucket: "wzzm-ce3fc.appspot.com", /* cite: 79 */
+            messagingSenderId: "249427877153", /* cite: 79 */
+            appId: "1:249427877153:web:0e4297294794a5aadeb260", /* cite: 79 */
+            measurementId: "G-PLKNZNFCQ8" /* cite: 79 */
         };
 
         // Initialize Firebase
