--- a/recepcao.html
+++ b/recepcao.html
@@ -804,9 +804,9 @@ async function displayForums() {
                     messageElement.innerHTML = `
                         <strong>${senderName}</strong> <span class="timestamp">(${date})</span>
                         <div class="message-content">${message.content}</div> <div class="message-actions">
-                            ${(currentUser && (currentUser.uid === message.authorUid || currentUserIsAdmin)) ? `
-                                <button class="mdl-button mdl-js-button mdl-button--icon edit-btn" onclick="editMessage onclick="editMessage('${forumCreatorUid}', '${forumId}', '${messageId}')">
-                                    <i class="material-icons">edit</i>
+                        <button class="mdl-button mdl-js-button mdl-button--icon edit-btn"
+                                onclick="editMessage('${forumCreatorUid}', '${forumId}', '${messageId}')"title="Editar">
+                                <i class="material-icons">edit</i>
                                 </button>
                                 <button class="mdl-button mdl-js-button mdl-button--icon delete-btn" onclick="deleteMessage('${forumCreatorUid}', '${forumId}', '${messageId}')" title="Remover Mensagem">
                                     <i class="material-icons">delete</i>
