--- a/index.html
+++ b/index.html
@@ -353,6 +353,7 @@
 <!-- Área dos Menus -->
 
                 <a class="mdl-navigation__link" href="#" onclick="loadPage('recepcao.html', false)">Página Inicial</a>
+		<a class="mdl-navigation__link" href="#" onclick="loadPage('./skyscraperwiki/', false)">Fórum Not Skyscraper</a>
                 <a class="mdl-navigation__link" href="#" onclick="loadPage('./transparencia/', false)">Transparência</a>
                 <a class="mdl-navigation__link" href="#" onclick="loadPage('./games/', false)">Jogos Gratuitos</a>
 
