--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@
         <header class="mdl-layout__header">
             <div class="mdl-layout__header-row">
                 <span class="mdl-layout-title">Wiki Zone Zero Mod</span>
-		        <a href="https://wikizero.wzzm.org/" id="./wikinotpedia/"> 
+		        <a href="http://www.wzzm.org/POL%C3%8DTICAS%20GERAIS%20DO%20WIKI%20ZONE%20ZERO%20MOD.pdf" id="./wikinotpedia/"> 
                 <img src="https://wzzm.org/wnp.png" alt="Logo Wiki Zone Zero Mod" style="height: 32px; vertical-align: middle; margin-right: 8px;"></a> <div class="mdl-layout-spacer"></div>
                 <nav class="mdl-navigation">
                     <a class="mdl-navigation__link" href="#" onclick="loadPage('recepcao.html', false)">Início</a>
