--- a/games/index.html
+++ b/games/index.html
@@ -145,6 +145,15 @@
                 imageUrl: "https://i.imgur.com/your-fantasyrealm-cover.png", // Substitua
                 status: "Em Desenvolvimento",
                 versao: "0.1.2"
+            }
+
+            {
+                nome: "Ball Jump ",
+                descricao: "Pulador",
+                path: "./jump",
+                imageUrl: "https://i.imgur.com/your-fantasyrealm-cover.png", // Substitua
+                status: "Em Desenvolvimento",
+                versao: "0.1.2"
             },
             
             {
