--- a/wtube/vids/index.html
+++ b/wtube/vids/index.html
@@ -26,7 +26,7 @@
 <body>
 
     <video controls>
-        <source src="URL_DO_SEU_VIDEO.mp4" type="video/mp4">
+        <source src="./meettheinevitable.mp4" type="video/mp4">
         Seu navegador não suporta a tag de vídeo.
     </video>
 
