--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@ window.location.href = './mobile/index.html';
 <div class="mdl-layout__header-row">
 <span class="mdl-layout-title" id="wiki-page-name">Carregando...</span>
 <a href="https://wikizero.wzzm.org/" id="./wikinotpedia/">
-<img src="https://wzzm.org/wnp.png" alt="Logo Wiki Zone Zero Mod" style="height: 32px; vertical-align: middle; margin-right: 8px;"></a> <div class="mdl-layout-spacer"></div>
+<img src="https://wzzm.org/wikizero.gif" alt="Logo Wiki Zone Zero Mod" style="height: 32px; vertical-align: middle; margin-right: 8px;"></a> <div class="mdl-layout-spacer"></div>
 <nav class="mdl-navigation">
 <button class="mdl-button mdl-js-button mdl-button--icon" id="error-log-button" title="Ver Erros">
 <i class="material-icons">bug_report</i>
