--- a/wnpx.html
+++ b/wnpx.html
@@ -17,6 +17,7 @@
         .data-list { list-style-type: none; padding: 0; }
         .data-list li { padding: 8px 0; border-bottom: 1px solid #eee; }
         .data-list li:last-child { border-bottom: none; }
+        .formatted-content { margin-top: 10px; padding: 10px; background-color: #f9f9f9; border: 1px solid #ddd; border-radius: 4px; }
     </style>
     <script src="https://www.gstatic.com/firebasejs/9.0.0/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.0.0/firebase-auth-compat.js"></script>
@@ -37,13 +38,11 @@
             <p id="loading" class="mdl-color-text--light-blue-600">Carregando dados...</p>
 
             <div id="report-content" style="display:none;">
-
                 <div class="report-section">
                     <h2>Relatório Financeiro</h2>
                     <p>Total de documentos: <strong id="total-financial-data">0</strong></p>
                     <ul id="financial-data-list" class="data-list"></ul>
                 </div>
-                
             </div>
         </div>
     </main>
@@ -79,12 +78,15 @@
             collectionSnapshot.forEach(doc => {
                 const data = doc.data();
                 const listItem = document.createElement('li');
+
+                // Inserir o HTML de formattedContent diretamente
                 listItem.innerHTML = `
                     <strong>Documento ID:</strong> ${doc.id}<br>
                     <strong>Título:</strong> ${data.title || 'N/A'}<br>
                     <strong>Descrição:</strong> ${data.description || 'N/A'}<br>
                     <strong>Usuário ID:</strong> ${data.userId || 'N/A'}<br>
                     <strong>Última Modificação:</strong> ${data.lastModified ? data.lastModified.toDate() : 'N/A'}
+                    ${data.formattedContent ? `<div class="formatted-content">${data.formattedContent}</div>` : ''}
                 `;
                 dataList.appendChild(listItem);
             });
