--- a/wnpx.html
+++ b/wnpx.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Relatório Financeiro do Firebase</title>
+    <title>Relatório Financeiro</title>
     <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.blue-indigo.min.css" />
     <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
     <style>
@@ -29,12 +29,12 @@
 <div class="mdl-layout mdl-js-layout">
     <header class="mdl-layout__header">
         <div class="mdl-layout__header-row">
-            <span class="mdl-layout-title">Relatório de Dados do Firebase</span>
+            <span class="mdl-layout-title">Relatório de Dados</span>
         </div>
     </header>
     <main class="mdl-layout__content">
         <div class="page-content">
-            <p>Este relatório lista as coleções e os dados do seu banco de dados Firebase.</p>
+            <p>Este relatório de dados de custos.</p>
             <p id="loading" class="mdl-color-text--light-blue-600">Carregando dados...</p>
 
             <div id="report-content" style="display:none;">
